docs: update content

--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
       content="The Portfolio of Evgeniy Guzenkov"
     />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>EG</title>
+    <title>Guzya</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
